// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BuildedProcessStep > toString options: function, pickup 1`] = `
"
/* beforeProcessStep(index: 1) */
/* end_block */


				result = this.steps[1].processFunction(
					request,
					this.steps[1].params.options(floor.pickup),
					this.steps[1].params.input(floor.pickup)
				);

				
/* beforeTreatResultProcessStep(index: 1) */
/* end_block */


				if(result instanceof this.Response){

break Execution;
}

				
/* beforeIndexingResultProcessStep(index: 1) */
/* end_block */


				floor.drop("rr", result["rr"]);
floor.drop("tt", result["tt"]);
				

/* afterProcessStep(index: 1) */
/* end_block */
"
`;

exports[`BuildedProcessStep > toString options: object, input, skip 1`] = `
"
/* beforeProcessStep(index: 1) */
/* end_block */


		if(!this.steps[1].params.skip(floor.pickup)){
			
				result = this.steps[1].processFunction(
					request,
					this.steps[1].params.options,
					this.steps[1].params.input(floor.pickup)
				);

				
/* beforeTreatResultProcessStep(index: 1) */
/* end_block */


				if(result instanceof this.Response){

break Execution;
}

				
/* beforeIndexingResultProcessStep(index: 1) */
/* end_block */


				
				
		}
		

/* afterProcessStep(index: 1) */
/* end_block */
"
`;
